--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@
 body{
     min-height: 100vh;
     width: 100%;
-    background-color: black;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,47 +17,92 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 62%;
-    border: 2px solid white;
+    width: 45%;
+    /* border: 2px solid yellow; */
     margin-top: 4.3125em;
+    margin-bottom: 3.125em; /*50px*/
 }
 
 
 .navigation__title-title{
-    font-family: 'Baloo 2';
+    font-family: 'Aldrich';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 36px;
     letter-spacing: -0.25px;
-    color: #FFFFFF;
+    color: black;
 }
 
 .navigation__text{
+    /* border: 2px solid green; */
+    width: 30%;
+    height: auto;
     list-style: none;
     display: flex;
     flex-direction: row;
-    align-items: space-between;
-    justify-content: baseline;
-    padding: 0;
+    justify-content: space-around;
+    align-items: center;
+    padding-right: 3%;
 
 }
 
 .navigation__text-link{
-    color: white;
+    color: black;
     text-decoration: none;
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 22px;
-    color: #FFFFFF;
-   
+    line-height: 22px;  
 }
 
+
+/*MAIN*/
+
+.main{
+    margin-top:  2.9375em; /*50px*/
+    padding-top: 3.3125em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main__title{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 90px;
+    line-height: 102px;
+    /* identical to box height, or 113% */
+
+    letter-spacing: -2px;
+
+    color: #242635;
+    margin: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+
+.main__text{
+    width: 60%;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 33px;
+    /* or 150% */
+
+    text-align: center;
+
+    color: #242635;
+    padding-bottom: 47px;
+}
 
 /*IMAGE*/
 .main__pic{
     max-width: 54em;
-    max-height: 20.5em; 
+    max-height: 30.375em; 
+    
 }
